# MDSDWS1819

./: .gitignore  README.md
CPPInterpreter/: CMakeLists.txt
CPPInterpreter/include/milbe/: CallStack.h  Instruction.h  Interpreter.h  OperandStack.h  Program.h  ProgramAddress.h  ProgramDefinition.h  Types.h  VariableRegister.h
CPPInterpreter/src/: CallStack.cpp  Interpreter.cpp  main.cpp
Presentation/: Example.pptx  MDSD_Bittner_Embedded.pptx
Workspaces/Development/edu.mdsd.mil/: .project  plugin.properties  plugin.xml
Workspaces/Development/edu.mdsd.mil.resource.mil/: .classpath  .project  plugin.xml
Workspaces/Development/edu.mdsd.mil.resource.mil.ui/: .project  plugin.xml
Workspaces/Development/edu.mdsd.mil.resource.mil/schema/: additional_extension_parser.exsd  default_load_options.exsd
Workspaces/Development/edu.mdsd.mpl/: .classpath  .project  plugin.properties  plugin.xml
Workspaces/Development/edu.mdsd.mpl.resource.mpl/: .project  plugin.xml
Workspaces/Development/edu.mdsd.mpl.resource.mpl.ui/: .project  plugin.xml
Workspaces/Runtime/CompilerPlayground/: .project  AdventureTime.mil  AdventureTime.milb  AdventureTime.mpl  Test.mil  Test.milb  Test.mpl  call.mil  call.milb  printTest.mil  printTest.milb
Workspaces/Runtime/Demo/: .project
Workspaces/Runtime/MPLCounterExamples/: .project
Workspaces/Runtime/MPLExamples/: .project  Revision3.mpl  Test.mpl
Workspaces/Runtime/MyMILExamples/: .project  interpreterTest1.mil  revision1.mil  revision1.milb  revision2.mil
Workspaces/Runtime/MyMPLExamples/: Revision3.mpl  Revision4.mpl  StrangeArithmeticOperatorParsing.mpl  playground.mpl
(+169 files in other folders)
